# projekt-2-solenoid737

./: CMakeLists.txt
include/: zad_1.hpp  zad_2.hpp  zad_3.hpp  zad_4.hpp
src/: main.cpp  zad_1.cpp  zad_2.cpp  zad_3.cpp  zad_4.cpp
