cmake_minimum_required(VERSION 3.20)
project(cpp-project CXX)

file(GLOB_RECURSE SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.cpp")
add_executable(cpp-project ${SRC_FILES})
target_include_directories(cpp-project PUBLIC "${CMAKE_SOURCE_DIR}/include")
set_target_properties(cpp-project PROPERTIES CXX_STANDARD 23)
if(MINGW)
  target_link_libraries(cpp-project "-lstdc++exp")
endif()
add_custom_command(TARGET cpp-project POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy_directory
    "${CMAKE_SOURCE_DIR}/include"
    "$<TARGET_FILE_DIR:cpp-project>/include"
)
